# aegir

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
aegir/: Cargo.toml
aegir/benches/: linear.rs  logistic.rs  lr_sgd.rs
aegir/examples/: caching.rs  derive_op.rs  hessian.rs  linear.rs  linear_regression.rs  logistic.rs  lr_sgd.rs  lr_sgd_manual.rs  lr_sgd_raw.rs  rewrite.rs  test.rs
aegir/src/: buffer.rs  dual.rs  errors.rs  fmt.rs  lib.rs  logic.rs  macros.rs  module.rs  named.rs  sources.rs
aegir/src/buffers/: arrays.rs  mod.rs  precedence.rs  scalars.rs  spec.rs  tuples.rs  vecs.rs
aegir/src/buffers/arrays/: buffer.rs  contraction_ops.rs  dot_ops.rs  mod.rs  zip_ops.rs
aegir/src/buffers/ndarray/: mod.rs
aegir/src/buffers/shapes/: compiled.rs  mod.rs  multi_product.rs  runtime.rs
aegir/src/maths/: arithmetic.rs  linalg.rs  mod.rs  reduce.rs  sigmoid.rs  special.rs  trig.rs
aegir/src/meta/: cached.rs  constant.rs  mod.rs  variable.rs
aegir/src/ops/: arithmetic.rs  linalg.rs  logarithmic.rs  mod.rs  reduce.rs  reductions.rs  scalar.rs  sigmoid.rs  special.rs  trig.rs
aegir/src/ops/arithmetic/: binary.rs  binary_ops.rs  mod.rs  unary.rs  unary_ops.rs
aegir/src/ops/linalg/: inner_product.rs  mod.rs  outer_product.rs
aegir/src/ops/linalg/tensor_mul/: impls.rs  mod.rs
aegir/src/sources/: constant.rs  mod.rs  variable.rs
aegir_compile/: Cargo.toml  LICENSE  README.md
aegir_compile/src/: lib.rs
aegir_compile/tests/: tests.rs
aegir_derive/: Cargo.toml
aegir_derive/src/: ctx.rs  db.rs  ids.rs  lib.rs  ops.rs  state.rs
aegir_derive/src/ctx/: ctx_type.rs  derive.rs  mod.rs
src/: buffer.rs  lib.rs
