[package]
name = "aegir"
description = "Strongly-typed, reverse-mode autodiff library in Rust"

version = "0.1.0"
authors = ["Tom Spooner <spooner10000@gmail.com>"]

license = "MIT"
readme = "README.md"

keywords = ["autodiff", "autograd", "compute", "dag", "math"]

repository = "https://github.com/tspooner/aegir"
documentation = "https://docs.rs/aegir"

edition = "2018"

[badges]
travis-ci = { repository = "tspooner/aegir", branch = "master" }
coveralls = { repository = "tspooner/aegir", branch = "master", service = "github" }

[dependencies]
aegir_derive = { path = "../aegir_derive" }
aegir_compile = { path = "../aegir_compile" }

paste = "1.0"
either = "1.6"

ndarray = "0.14"
num-traits = "0.2"

special-fun = "0.2"

[dev_dependencies]
rand = "0.8"
