[package]
name = "aegir"
description = "Strongly-typed, reverse-mode autodiff library in Rust"

version = "0.1.0"
authors = ["Tom Spooner <spooner10000@gmail.com>"]

license = "MIT"
readme = "README.md"

keywords = ["autodiff", "autograd", "compute", "dag", "math"]

repository = "https://github.com/tspooner/aegir"
documentation = "https://docs.rs/aegir"

edition = "2018"

[badges]
travis-ci = { repository = "tspooner/aegir", branch = "master" }
coveralls = { repository = "tspooner/aegir", branch = "master", service = "github" }

[features]
default = []

ndarray = ["ndarray_crate"]

[dependencies]
aegir_derive = { path = "../aegir_derive" }
aegir_compile = { path = "../aegir_compile" }

num-traits = "0.2"
special-fun = "0.2"

itertools = "0.10"
array-init = "2.0"
concat-arrays = "0.1"

paste = "1.0"

[dependencies.ndarray_crate]
package = "ndarray"
optional = true
version = "0.15"

[dev_dependencies]
rand = "0.8"
